--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                 <div class="input-area">
                     <input type="text" id="userInput" placeholder="Type your question here..." autocomplete="off">
                     <button id="sendButton">Send</button>
+                    <button id="stopButton" style="display: none;">Stop</button>
                 </div>
             </div>
         </div>
