--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,16 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <div id="summaryModal" class="modal">
+            <div class="modal-content">
+                <span class="close-modal">&times;</span>
+                <h2 id="summaryModalTitle">Resumen del Mensaje</h2>
+                <div id="summaryModalBody" style="white-space: pre-wrap; line-height: 1.6;">
+                    </div>
+            </div>
+        </div>
+        </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
